unitas-rs/pattern-macro/tests/compile_fails/missing_offset.rs
use pattern_macro::pattern;

fn main() {
    pattern!();
}
